feat(authentication):add basic structure for setting up authentication

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,10 @@
     <title>Hello, World!</title>
 </head>
 <body>
+  <h1>App</h1>
+  <div>
+    <ng-view></ng-view>
+  </div>
   <script type="application/dart" src="main.dart"></script>
   <script type="text/javascript" src="packages/browser/dart.js"></script>
 </body>
